--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/vue-query": "^4.29.7",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/luxon": "^3.3.0",
     "@types/node": "^18.16.15",
     "@vee-validate/zod": "^4.9.5",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -28,6 +29,7 @@
     "eslint-plugin-vue": "^9.14.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "luxon": "^3.3.0",
     "npm-run-all": "^4.1.5",
     "pinia": "^2.1.3",
     "postcss": "^8.4.23",
