--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@rushstack/eslint-patch": "^1.3.0",
     "@tailwindcss/forms": "^0.5.3",
-    "@tanstack/vue-query": "^4.29.7",
+    "@tanstack/vue-query": "4.29.7",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/luxon": "^3.3.0",
