--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.73",
     "@rushstack/eslint-patch": "^1.3.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/vue-query": "4.29.7",
@@ -37,6 +38,8 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.4",
+    "unplugin-icons": "^0.16.2",
+    "unplugin-vue-components": "^0.25.0",
     "vee-validate": "^4.9.5",
     "vite": "^4.3.9",
     "vue": "^3.3.4",
