--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "vite": "^4.3.9",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
+    "vue-toastification": "2.0.0-rc.5",
     "vue-tsc": "^1.6.5",
     "wretch": "^2.5.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "prettier": "^2.8.8"
   }
 }
